apps/penpot/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  namespace: penpot
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Penpot"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "penpot.png"
    gethomepage.dev/description: "Design"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=penpot"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-penpot
  hostnames:
    - penpot.stevevaradi.me
  rules:
    - backendRefs:
        - name: penpot
          port: 8080
